--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dailyactivityregister.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_add_project"
         android:orderInCategory="100"
+        android:title="@string/action_add_project"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_upload_excel"
+        android:orderInCategory="102"
+        android:title="@string/action_upload_excel"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="103"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
