--- a/app/src/main/res/layout/project_task_item.xml
+++ b/app/src/main/res/layout/project_task_item.xml
@@ -27,13 +27,13 @@
         android:layout_marginTop="4dp"
         android:orientation="horizontal">
 
-        <EditText
+        <TextView
             android:id="@+id/taskCurrent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
             android:minEms="4"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:text="89.5"/>
 
         <TextView
             android:id="@+id/taskTarget"
